--- a/Notebooks/Initial_data_upload_and_EDA.ipynb
+++ b/Notebooks/Initial_data_upload_and_EDA.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "ff4da15d-8d3a-43d5-8d24-b3dc1abe9dd5",
    "metadata": {
     "tags": []
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "8f9e0c44-e7c5-45d5-81d2-0b105a1b0776",
    "metadata": {
     "tags": []
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "da90cf06-8fe9-402a-814e-90d1670f5934",
    "metadata": {
     "tags": []
@@ -66,7 +66,7 @@
        "(190300, 111)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "4e2c45b9-cc63-47fb-9822-c7ad81c72b15",
    "metadata": {
     "collapsed": true,
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "1e2ba31d-8343-47d7-8582-b97febcd4d54",
    "metadata": {
     "tags": []
@@ -448,7 +448,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,43 @@
    "id": "a0e3db56-0143-4042-aad9-0d267cbee5c9",
    "metadata": {},
    "source": [
-    "Each row in the dataframe represents team stats for a specific game. We can see that there are columns indicating the team, as well as the opposing team they faced in that game. There is also a unique gameID column that follows a standard format to identify each game separately. Each gameID has two separate sets of rows, one set for each teHowever, there are multiple rows for each team/game combination."
+    "Each row in the dataframe represents team statistics for a specific game. We can see that there are columns indicating the team, as well as the opposing team they faced in that game. There is also a unique gameID column that follows a standard format to identify each game separately. Each gameID has two separate sets of rows, one set for each team. However, there are multiple rows for each team/game combination. This is because there are rows for different game situations (listed in the 'situation' column), specifically around when one team or the other has a penalty, leaving them shorthanded. In fact, there are 5 rows for each team/game combination. For the purposes of predicting future game outcomes, we will only need the total statistics for each game, as it would be difficult to accurately predict the penalties that a team takes in a given match. As a result, we can filter the dataframe down to only include rows where the value in the situation column is \"all\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cad9fcd0-857b-42fa-aa8e-66df1bde7d81",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Filter mp_df to select only rows where 'situation' is equal to 'all'\n",
+    "filtered_mp_df = mp_df[mp_df['situation'] == 'all']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "af68fb04-9918-42eb-a3cb-a105b67df8b7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(38060, 111)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_mp_df.shape"
    ]
   }
  ],
