Update initial notebook

--- a/Notebooks/Initial_data_upload_and_EDA.ipynb
+++ b/Notebooks/Initial_data_upload_and_EDA.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "ff4da15d-8d3a-43d5-8d24-b3dc1abe9dd5",
    "metadata": {
     "tags": []
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "8f9e0c44-e7c5-45d5-81d2-0b105a1b0776",
    "metadata": {
     "tags": []
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "da90cf06-8fe9-402a-814e-90d1670f5934",
    "metadata": {
     "tags": []
@@ -66,7 +66,7 @@
        "(190300, 111)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,13 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "4e2c45b9-cc63-47fb-9822-c7ad81c72b15",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -219,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "1e2ba31d-8343-47d7-8582-b97febcd4d54",
    "metadata": {
     "tags": []
@@ -448,7 +444,7 @@
        "[5 rows x 111 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "cad9fcd0-857b-42fa-aa8e-66df1bde7d81",
    "metadata": {
     "tags": []
@@ -480,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "af68fb04-9918-42eb-a3cb-a105b67df8b7",
    "metadata": {
     "tags": []
@@ -492,13 +488,239 @@
        "(38060, 111)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "filtered_mp_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f38024ec-9248-4e80-a2de-97b99a486bb0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 38060 columns and 111 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'There are {filtered_mp_df.shape[0]} columns and {filtered_mp_df.shape[1]} rows')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22229470-47a6-45ab-ac7f-a9a59f06557d",
+   "metadata": {},
+   "source": [
+    "HOW DOES THIS COMPARE TO THE ACUAL NUMBER OF GAMES DURING THIS PERIOD????"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3a2de0d6-78e1-41a3-a01a-4e4fa0aad4d6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>name</th>\n",
+       "      <th>playerTeam</th>\n",
+       "      <th>opposingTeam</th>\n",
+       "      <th>home_or_away</th>\n",
+       "      <th>position</th>\n",
+       "      <th>situation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>T.B</td>\n",
+       "      <td>AWAY</td>\n",
+       "      <td>Team Level</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>T.B</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>Team Level</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>Team Level</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>AWAY</td>\n",
+       "      <td>Team Level</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>NYR</td>\n",
+       "      <td>N.J</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>Team Level</td>\n",
+       "      <td>all</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   team name playerTeam opposingTeam home_or_away    position situation\n",
+       "1   NYR  NYR        NYR          T.B         AWAY  Team Level       all\n",
+       "6   NYR  NYR        NYR          T.B         HOME  Team Level       all\n",
+       "11  NYR  NYR        NYR          CHI         HOME  Team Level       all\n",
+       "16  NYR  NYR        NYR          PHI         AWAY  Team Level       all\n",
+       "21  NYR  NYR        NYR          N.J         HOME  Team Level       all"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# top 5 rows showing only 'object' columns\n",
+    "filtered_mp_df.select_dtypes('object').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a2c9de53-66c7-40c3-8e93-bcea4b33d226",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "team                                         0\n",
+       "season                                       0\n",
+       "name                                         0\n",
+       "gameId                                       0\n",
+       "playerTeam                                   0\n",
+       "                                            ..\n",
+       "reboundxGoalsAgainst                         0\n",
+       "totalShotCreditAgainst                       0\n",
+       "scoreAdjustedTotalShotCreditAgainst          0\n",
+       "scoreFlurryAdjustedTotalShotCreditAgainst    0\n",
+       "playoffGame                                  0\n",
+       "Length: 111, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_mp_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f60393c1-050a-44d1-b5ce-61da14e855e8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No columns have null values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for null values in each column\n",
+    "columns_with_null = filtered_mp_df.columns[filtered_mp_df.isna().any()]\n",
+    "\n",
+    "# Display columns with null values, if any\n",
+    "if not columns_with_null.empty:\n",
+    "    print(\"Columns with null values:\")\n",
+    "    print(columns_with_null)\n",
+    "else:\n",
+    "    print(\"No columns have null values.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5af6bc65-3171-4ad0-9129-34a7042a5ea9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filtered_mp_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mfiltered_mp_df\u001b[49m\u001b[38;5;241m.\u001b[39mT\u001b[38;5;241m.\u001b[39mduplicated()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'filtered_mp_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_mp_df.T.duplicated()"
    ]
   }
  ],
