--- a/Notebooks/Final Model Optimization, Evaluation and Interpretation.ipynb
+++ b/Notebooks/Final Model Optimization, Evaluation and Interpretation.ipynb
@@ -25,21 +25,24 @@
   {
    "cell_type": "markdown",
    "id": "aee82421-57e0-4036-980e-bea7cea15cad",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## **Table of Contents** ##\n",
     "---\n",
-    "1. [Introduction](#1)\n",
-    "2. [Loading and Setup](#2)\n",
-    "3. [Additional Feature Engineering](#3)\n",
-    "4. [Modeling](#4)\n",
-    "    - [Logistic Regression](#4a)\n",
-    "    - [Support Vector Machine](#4b)\n",
-    "    - [Random Forest](#4c)\n",
-    "    - [XGBoost](#4d)\n",
-    "    - [Neural Network](#4e)\n",
-    "5. [Performance Evaluation](#5)\n",
-    "6. [Conclusion and Next Steps](#6)"
+    "1. [Introduction](#intro)\n",
+    "2. [Loading and Setup](#setup)\n",
+    "3. [Additional Feature Engineering](#featureEng)\n",
+    "4. [Modeling](#model)\n",
+    "    - [Logistic Regression](#logReg)\n",
+    "    - [Support Vector Machine](#svm)\n",
+    "    - [Random Forest](#ranForest)\n",
+    "    - [XGBoost](#xgb)\n",
+    "    - [Neural Network](#nn)\n",
+    "5. [Performance Evaluation](#eval)\n",
+    "6. [Conclusion and Next Steps](#concl)"
    ]
   },
   {
@@ -47,7 +50,7 @@
    "id": "7ca2337a-7076-41ed-b962-1fbd00d27317",
    "metadata": {},
    "source": [
-    "## **Introduction** <a class=\"anchor\" id=\"1\"></a>"
+    "## **Introduction** <a class=\"anchor\" name=\"intro\"></a>"
    ]
   },
   {
@@ -67,7 +70,7 @@
    "id": "5df57f6a-fbd4-4546-af11-06efc3416541",
    "metadata": {},
    "source": [
-    "## **Loading and Setup** <a class=\"anchor\" id=\"2\"></a>"
+    "## **Loading and Setup** <a class=\"anchor\" name=\"setup\"></a>"
    ]
   },
   {
@@ -1481,7 +1484,7 @@
    "id": "0f392c47-5835-419a-a81a-71f661fee913",
    "metadata": {},
    "source": [
-    "## **Addtional Feature Engineering** <a class=\"anchor\" id=\"3\"></a>"
+    "## **Addtional Feature Engineering** <a class=\"anchor\" name=\"featureEng\"></a>"
    ]
   },
   {
@@ -5946,7 +5949,7 @@
    "id": "66cb4fe0-33dd-4a82-9b85-8e653da4391e",
    "metadata": {},
    "source": [
-    "## **Modeling**"
+    "## **Modeling** <a class=\"anchor\" name=\"model\"></a>"
    ]
   },
   {
@@ -6100,7 +6103,7 @@
    "id": "72c9f98c-5a6c-4d64-a7fc-94d1b1d9573a",
    "metadata": {},
    "source": [
-    "### Logistic Regression <a class=\"anchor\" id=\"3a\"></a>"
+    "### Logistic Regression <a class=\"anchor\" name=\"logReg\"></a>"
    ]
   },
   {
@@ -6473,7 +6476,7 @@
    "id": "1944b679-5883-4dd7-9867-bbf867a62af6",
    "metadata": {},
    "source": [
-    "### SVM <a class=\"anchor\" id=\"3b\"></a>"
+    "### SVM <a class=\"anchor\" name=\"svm\"></a>"
    ]
   },
   {
@@ -6557,7 +6560,7 @@
    "id": "0c391a94-44c5-4681-aa5e-a90c1b94221a",
    "metadata": {},
    "source": [
-    "### Random Forest <a class=\"anchor\" id=\"3c\"></a>"
+    "### Random Forest <a class=\"anchor\" name=\"ranForest\"></a>"
    ]
   },
   {
@@ -6642,7 +6645,7 @@
    "id": "6fec937a-4a18-429c-b6a8-4c662d867bb0",
    "metadata": {},
    "source": [
-    "### XGBoost <a class=\"anchor\" id=\"3c\"></a>"
+    "### XGBoost <a class=\"anchor\" name=\"xgb\"></a>"
    ]
   },
   {
@@ -6732,7 +6735,7 @@
     "tags": []
    },
    "source": [
-    "### Neural Network <a class=\"anchor\" id=\"3e\"></a>"
+    "### Neural Network <a class=\"anchor\" name=\"nn\"></a>"
    ]
   },
   {
@@ -7067,347 +7070,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 246,
-   "id": "7efb0ffe-49b1-44ef-ba40-49eba9cdc9fb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Hyperparameters: {'C': 0.01, 'penalty': 'l2', 'solver': 'lbfgs'}\n",
-      "Test Accuracy: 0.5903818953323904\n",
-      "Log Loss: 0.670236529851802\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Regression with the RFE variables\n",
-    "# PCA added\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "# Define the features and the target\n",
-    "X = merged_df[['days', 'w_goals', 'w_goalDiff', 'w_takeaways%', 'w_giveaways%',\n",
-    "       'w_Shots%', 'w_Corsi%', 'w_FO%', 'w_Fenwick%', 'w_AdjCorsi%',\n",
-    "       'w_AdjFenwick%', 'w_HDSdiff', 'w_xGoalsDiff', 'w_FAxGoalsDiff',\n",
-    "       'w_SVAxGoalsDiff', 'w_FSVAxGoalsDiff', 'w_dZoneGiveaway%',\n",
-    "       'w_TakeawayRatio', 'w_win%', 'seasonWin%', 'w_Save%', 'w_PK%',\n",
-    "       'w_goals_a', 'w_FSVAxGoals_a', 'w_goalDiff_a', 'w_takeaways%_a',\n",
-    "       'w_giveaways%_a', 'w_Corsi%_a', 'w_Fenwick%_a', 'w_AdjCorsi%_a',\n",
-    "       'w_AdjFenwick%_a', 'w_HDSdiff_a', 'w_xGoalsDiff_a', 'w_FAxGoalsDiff_a',\n",
-    "       'w_SVAxGoalsDiff_a', 'w_dZoneGiveaway%_a', 'w_win%_a', 'seasonWin%_a',\n",
-    "       'w_DefEfficiency_a', 'w_Save%_a', 'w_PK%_a', 'w_PP%_a', 'w_blocks%_a',\n",
-    "       'B2Bcalc']]\n",
-    "y = merged_df['won']\n",
-    "\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
-    "\n",
-    "# Initialize a scaler, then apply it to the features\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "# Fit the scaler to the training data and transform\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "\n",
-    "# Apply the scaler to the test data\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "# Create a PCA instance\n",
-    "pca = PCA()\n",
-    "\n",
-    "# Create a logistic regression model\n",
-    "model = LogisticRegression()\n",
-    "\n",
-    "# Define hyperparameters for tuning\n",
-    "param_grid = {\n",
-    "    'penalty': ['l1', 'l2'],\n",
-    "    'C': [0.0001, 0.001, 0.01, 0.1, 1, 10, 100],\n",
-    "    'solver': ['liblinear', 'lbfgs']\n",
-    "}\n",
-    "\n",
-    "# Create GridSearchCV object\n",
-    "grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='accuracy')\n",
-    "\n",
-    "# Create a pipeline with PCA and Logistic Regression\n",
-    "pipeline = Pipeline([\n",
-    "    ('pca', pca),\n",
-    "    ('model', grid_search)\n",
-    "])\n",
-    "\n",
-    "# Fit the pipeline on the training data\n",
-    "pipeline.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "# Get the best parameters from the grid search\n",
-    "best_params = pipeline.named_steps['model'].best_params_\n",
-    "\n",
-    "# Use the best parameters to create the final model\n",
-    "final_model = LogisticRegression(**best_params)\n",
-    "\n",
-    "# Fit the final model on the training data\n",
-    "final_model.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "# Make predictions on the test data\n",
-    "y_test_pred = final_model.predict(X_test_scaled)\n",
-    "\n",
-    "# Calculate accuracy on the test data\n",
-    "log_test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "\n",
-    "# Make predicted probabilities on the test data\n",
-    "y_test_probs = final_model.predict_proba(X_test_scaled)\n",
-    "\n",
-    "# Calculate log loss on the test data\n",
-    "log_loss_value = log_loss(y_test, y_test_probs)\n",
-    "\n",
-    "print(\"Best Hyperparameters:\", best_params)\n",
-    "print(\"Test Accuracy:\", log_test_accuracy)\n",
-    "print(\"Log Loss:\", log_loss_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "bd97e825",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Accuracy: 0.5816651340454128\n",
-      "Test Accuracy: 0.5903818953323904\n",
-      "Log Loss: 0.6709214478204027\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Basic regression playing\n",
-    "# testing\n",
-    "from sklearn.metrics import log_loss\n",
-    "\n",
-    "# Define the features and the target\n",
-    "# X = model_df\n",
-    "X = merged_df[['w_AdjFenwick%', 'B2Bcalc', 'w_Fenwick%_a', 'last10wins', 'last10wins_a', 'w_goals', 'w_takeaways', 'w_goalDiff', 'w_goals_a', 'w_goalDiff_a', \n",
-    "              'w_hits_a', 'w_FAxGoals_a', 'w_blocks%_a', 'w_Save%', 'w_Save%_a', 'w_ShotEfficiency', 'w_DefEfficiency', 'seasonWin%', 'w_win%',\n",
-    "              'w_PP%_a', 'w_PK%', 'w_PK%_a', 'w_xGoalsDiff_a', 'w_hits%_a', 'w_FO%_a', 'w_giveaways%_a', 'w_HDSdiff', 'w_HDSRatio', 'GoalieSAR_a', \n",
-    "              'GoaliexGA']]\n",
-    "y = merged_df['won']\n",
-    "\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
-    "\n",
-    "# Initialize a scaler, then apply it to the features\n",
-    "scaler = StandardScaler()\n",
-    " \n",
-    "# Fit the scaler to the training data and transform\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "\n",
-    "# Apply the scaler to the test data\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Create a logistic regression model\n",
-    "model = LogisticRegression()\n",
-    "\n",
-    "# Fit the model on the training data\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions on the training data\n",
-    "y_train_pred = model.predict(X_train)\n",
-    "\n",
-    "# Make predictions on the test data\n",
-    "y_test_pred = model.predict(X_test)\n",
-    "\n",
-    "# Calculate accuracy on the training data\n",
-    "log_train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-    "\n",
-    "# Calculate accuracy on the test data\n",
-    "log_test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "\n",
-    "# Make predicted probabilities on the test data\n",
-    "y_test_probs = model.predict_proba(X_test)\n",
-    "\n",
-    "# Calculate log loss on the test data\n",
-    "log_loss_value = log_loss(y_test, y_test_probs)\n",
-    "\n",
-    "print(\"Training Accuracy:\", log_train_accuracy)\n",
-    "print(\"Test Accuracy:\", log_test_accuracy)\n",
-    "print(\"Log Loss:\", log_loss_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
-   "id": "679e70ee-001c-44ff-8202-b452e670e6ee",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Hyperparameters: {'C': 0.001, 'penalty': 'l2', 'solver': 'liblinear'}\n",
-      "Test Accuracy: 0.5881188118811881\n",
-      "Log Loss: 0.6716184731426266\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Regression with the RFE variables\n",
-    "# PCA added\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "# Define the features and the target\n",
-    "X = merged_df[['w_AdjFenwick%', 'B2Bcalc', 'w_Fenwick%_a', 'last10wins', 'last10wins_a', 'w_goals', 'w_takeaways', 'w_goalDiff', 'w_goals_a', 'w_goalDiff_a', \n",
-    "              'w_hits_a', 'w_FAxGoals_a', 'w_blocks%_a', 'w_Save%', 'w_Save%_a', 'w_ShotEfficiency', 'w_DefEfficiency', 'seasonWin%', 'w_win%',\n",
-    "              'w_PP%_a', 'w_PK%', 'w_PK%_a', 'w_xGoalsDiff_a', 'w_hits%_a', 'w_FO%_a', 'w_giveaways%_a', 'w_HDSdiff', 'w_HDSRatio']]\n",
-    "y = merged_df['won']\n",
-    "\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
-    "\n",
-    "# Initialize a scaler, then apply it to the features\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "# Fit the scaler to the training data and transform\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "\n",
-    "# Apply the scaler to the test data\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "# Create a logistic regression model\n",
-    "model = LogisticRegression()\n",
-    "\n",
-    "# Define hyperparameters for tuning\n",
-    "param_grid = {\n",
-    "    'penalty': ['l1', 'l2'],\n",
-    "    'C': [0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000],\n",
-    "    'solver': ['liblinear', 'lbfgs']\n",
-    "}\n",
-    "\n",
-    "# Create GridSearchCV object\n",
-    "grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='accuracy')\n",
-    "\n",
-    "# Create a pipeline with PCA and Logistic Regression\n",
-    "pipeline = Pipeline([\n",
-    "   ('model', grid_search)\n",
-    "])\n",
-    "\n",
-    "# Fit the pipeline on the training data\n",
-    "pipeline.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "# Get the best parameters from the grid search\n",
-    "best_params = pipeline.named_steps['model'].best_params_\n",
-    "\n",
-    "# Use the best parameters to create the final model\n",
-    "final_model = LogisticRegression(**best_params)\n",
-    "\n",
-    "# Fit the final model on the training data\n",
-    "final_model.fit(X_train_scaled, y_train)\n",
-    "\n",
-    "# Make predictions on the test data\n",
-    "y_test_pred = final_model.predict(X_test_scaled)\n",
-    "\n",
-    "# Calculate accuracy on the test data\n",
-    "log_test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "\n",
-    "# Make predicted probabilities on the test data\n",
-    "y_test_probs = final_model.predict_proba(X_test_scaled)\n",
-    "\n",
-    "# Calculate log loss on the test data\n",
-    "log_loss_value = log_loss(y_test, y_test_probs)\n",
-    "\n",
-    "print(\"Best Hyperparameters:\", best_params)\n",
-    "print(\"Test Accuracy:\", log_test_accuracy)\n",
-    "print(\"Log Loss:\", log_loss_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "f319d3c5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Accuracy: 0.5842116432057721\n",
-      "Test Accuracy: 0.5875530410183876\n",
-      "Log Loss: 0.6710064406948324\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Define the features and the target\n",
-    "X = merged_df[['days', 'w_goals', 'w_blocks', 'w_goalDiff', 'w_takeaways%',\n",
-    "       'w_giveaways%', 'w_Shots%', 'w_Corsi%', 'w_FO%', 'w_Fenwick%',\n",
-    "       'w_AdjCorsi%', 'w_AdjFenwick%', 'w_HDSdiff', 'w_FAxGoalsDiff',\n",
-    "       'w_SVAxGoalsDiff', 'w_FSVAxGoalsDiff', 'w_dZoneGiveaway%',\n",
-    "       'w_TakeawayRatio', 'w_win%', 'seasonWin%', 'w_Save%', 'w_PK%', 'w_PP%',\n",
-    "       'w_goals_a', 'w_FAxGoals_a', 'w_FSVAxGoals_a', 'w_takeaways_a',\n",
-    "       'w_goalDiff_a', 'w_takeaways%_a', 'w_Corsi%_a', 'w_Fenwick%_a',\n",
-    "       'w_AdjCorsi%_a', 'w_AdjFenwick%_a', 'w_HDSdiff_a', 'w_xGoalsDiff_a',\n",
-    "       'w_FAxGoalsDiff_a', 'w_SVAxGoalsDiff_a', 'w_FSVAxGoalsDiff_a',\n",
-    "       'w_dZoneGiveaway%_a', 'w_win%_a', 'w_Save%_a', 'w_PK%_a', 'w_PP%_a',\n",
-    "       'w_blocks%_a', 'B2Bcalc']]\n",
-    "y = merged_df['won']\n",
-    "\n",
-    "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
-    "\n",
-    "# Initialize a scaler, then apply it to the features\n",
-    "scaler = StandardScaler()\n",
-    " \n",
-    "# Fit the scaler to the training data and transform\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "\n",
-    "# Apply the scaler to the test data\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Create a logistic regression model\n",
-    "model = LogisticRegression()\n",
-    "\n",
-    "# Fit the model on the training data\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions on the training data\n",
-    "y_train_pred = model.predict(X_train)\n",
-    "\n",
-    "# Make predictions on the test data\n",
-    "y_test_pred = model.predict(X_test)\n",
-    "\n",
-    "# Calculate accuracy on the training data\n",
-    "log_train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-    "\n",
-    "# Calculate accuracy on the test data\n",
-    "log_test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "\n",
-    "# Make predicted probabilities on the test data\n",
-    "y_test_probs = model.predict_proba(X_test)\n",
-    "\n",
-    "# Calculate log loss on the test data\n",
-    "log_loss_value = log_loss(y_test, y_test_probs)\n",
-    "\n",
-    "print(\"Training Accuracy:\", log_train_accuracy)\n",
-    "print(\"Test Accuracy:\", log_test_accuracy)\n",
-    "print(\"Log Loss:\", log_loss_value)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c0a7a251-fed7-41ad-b960-d528592dba0c",
    "metadata": {},
    "source": [
-    "## **Modeling Performance**"
+    "## **Performance Evaluation** <a class=\"anchor\" name=\"eval\"></a>"
    ]
   },
   {
@@ -7436,7 +7103,7 @@
    "id": "bd4bd4de-d2b7-4669-80a7-ea522d25aff0",
    "metadata": {},
    "source": [
-    "Model performance was very consistent across the different classifiers. This suggests that we are pretty much at the upper limit of accuracy with the variables that we have."
+    "Model performance was very consistent across the different classifiers. This suggests that we are pretty much at the upper limit of accuracy with the variables that we have. The lowest log loss of any of the models (0.6691) is in line with some of the published models I reviewed, so my results were respectable."
    ]
   },
   {
@@ -9271,7 +8938,7 @@
    "id": "39b4072a-4fc7-40ab-96bf-1110009f692e",
    "metadata": {},
    "source": [
-    "## **Conclusion and Next Steps** <a class=\"anchor\" id=\"6\"></a>"
+    "## **Conclusion and Next Steps** <a class=\"anchor\" name=\"concl\"></a>"
    ]
   },
   {
@@ -9294,12 +8961,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0839eb0-43b7-43d7-b3ce-ba19fe631885",
+   "cell_type": "markdown",
+   "id": "39be00c9-0dd4-4df1-9abf-83d6da80597a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c8cc12d-4021-4ca1-9af5-a391be58c45f",
+   "metadata": {},
+   "source": [
+    "- Consider model enhancements, including\n",
+    "    - Variables specific to special teams play\n",
+    "    - Additional score/venue adjusted stats\n",
+    "    - Enhanced goalie stats\n",
+    "    - Use individual player stats to build a bottom-up model\n",
+    "- Consider building a website to publish game predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3cb6bac-57c4-4ccc-ad39-1f1cf324d5e0",
+   "metadata": {},
+   "source": [
+    "#### **Contact**\n",
+    "---\n",
+    "Mark Shumka <br>\n",
+    "[markshumka@gmail.com](mailto:markshumka@gmail.com) <br>\n",
+    "[LinkedIn](https://www.linkedin.com/in/mark-shumka/) <br>\n",
+    "[Github](https://github.com/markshumka)"
+   ]
   }
  ],
  "metadata": {
